--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
-icewm -- authors file.  2022-11-08
+icewm -- authors file.  2022-11-14
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Naveen <172697+naveensrinivasan@users.noreply.github.com>
+Author: Pino Toscano <toscano.pino@tiscali.it>
 Author: Stéphane LASSALVY <stephane.lassalvy@laposte.net>
 Author: Wallon <franckjl@hotmail.com>
 Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
