--- a/po/fr.po
+++ b/po/fr.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.2.15pre3\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2023-03-27 21:00+0200\n"
+"POT-Creation-Date: 2023-04-09 23:30+0200\n"
 "PO-Revision-Date: 2023-04-08 18:14+0000\n"
 "Last-Translator: Wallon <franckjl@hotmail.com>\n"
-"Language-Team: French <https://l10n.opensuse.org/projects/icewm/"
-"icewm-1-4-branch/fr/>\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1264,8 +1264,8 @@ msgstr ""
 "  --sync              Synchronise les commandes X11.\n"
 "\n"
 "  -B                  Affiche la page de manuel icewmbg de IceWM.\n"
-"  -b, --bugs          Affiche les rapports de bogue de IceWM (initialement)."
-"\n"
+"  -b, --bugs          Affiche les rapports de bogue de IceWM "
+"(initialement).\n"
 "  -f, --faq           Affiche la FAQ et les procédures IceWM.\n"
 "  -g                  Affiche le site Web Github de IceWM.\n"
 "  -i, --icewm         Affiche la page de manuel icewm de IceWM.\n"
@@ -1411,8 +1411,8 @@ msgstr "L’action \"%s\" nécessite au moins %d paramètre(s)."
 msgid "Invalid expression: `%s'"
 msgstr "Expression incorrecte : \"%s\""
 
-#: src/icesh.cc:4031 src/icesound.cc:794 src/icewmbg.cc:978 src/icewmhint.cc:37
-#: src/wmapp.cc:1232 src/yxapp.cc:1039
+#: src/icesh.cc:4031 src/icesound.cc:794 src/icewmbg.cc:1003
+#: src/icewmhint.cc:37 src/wmapp.cc:1232 src/yxapp.cc:1039
 #, c-format
 msgid "Can't open display: %s. X must be running and $DISPLAY set."
 msgstr ""
@@ -1799,12 +1799,12 @@ msgstr "Ouvrir les onglets"
 msgid "Wrap Lines"
 msgstr "Retour à la ligne automatique"
 
-#: src/icewmbg.cc:34 src/icewmbg.cc:345
+#: src/icewmbg.cc:34 src/icewmbg.cc:351
 #, c-format
 msgid "Failed to load image '%s'."
 msgstr "Échec du chargement de l’image '%s'."
 
-#: src/icewmbg.cc:873
+#: src/icewmbg.cc:898
 msgid ""
 "Usage: icewmbg [OPTIONS]\n"
 "Where multiple values can be given they are separated by commas.\n"
@@ -1866,18 +1866,18 @@ msgstr ""
 "se fermer.\n"
 "  -r, --restart        Indique à l’instance icewmbg en cours d’exécution de "
 "redémarrer.\n"
-"  -u, --shuffle        Mélange/réordonne la liste des images d’arrière-plan."
-"\n"
+"  -u, --shuffle        Mélange/réordonne la liste des images d’arrière-"
+"plan.\n"
 "\n"
 "  -c, --config=FILE    Charge les préférences à partir de FILE.\n"
 "  -t, --theme=NAME     Charge le thème nommé NAME.\n"
 "\n"
-"  -i, --image=FILE(S)  Charge les images d’arrière-plan à partir de FILE(S)."
-"\n"
+"  -i, --image=FILE(S)  Charge les images d’arrière-plan à partir de "
+"FILE(S).\n"
 "  -k, --color=NAME(S)  Utilise les couleurs d’arrière-plan de NAME(S).\n"
 "\n"
-"  -s, --semis=FILE(S)  Charge les images de transparence à partir de FILE(S)."
-"\n"
+"  -s, --semis=FILE(S)  Charge les images de transparence à partir de "
+"FILE(S).\n"
 "  -x, --trans=NAME(S)  Utilise les couleurs de transparence à partir de "
 "NAME(S).\n"
 "\n"
@@ -1885,8 +1885,8 @@ msgstr ""
 "  -a, --scaled=0/1     Désactive/active la mise à l’échelle de l’arrière-"
 "plan.\n"
 "  -m, --multi=0/1      Désactive/active l’arrière-plan multitête.\n"
-"  -y, --cycle=SECONDS  Faire un cycle des arrières-plans toutes les SECONDS."
-"\n"
+"  -y, --cycle=SECONDS  Faire un cycle des arrières-plans toutes les "
+"SECONDS.\n"
 "\n"
 "  --display=NAME       Utilise NAME pour se connecter au serveur X.\n"
 "  --sync               Synchronise la communication avec le serveur X11.\n"
@@ -1897,8 +1897,8 @@ msgstr ""
 "\n"
 "Charge l’arrière-plan de bureau en fonction du fichier de préférences :\n"
 " DesktopBackgroundCenter  - Affiche l’arrière-plan de bureau centré\n"
-" DesktopBackgroundScaled  - Affiche l’arrière-plan de bureau mis à l’"
-"échelle\n"
+" DesktopBackgroundScaled  - Affiche l’arrière-plan de bureau mis à "
+"l’échelle\n"
 " DesktopBackgroundColor   - Couleur(s) de l’arrière-plan de bureau\n"
 " DesktopBackgroundImage   - Image(s) de l’arrière-plan de bureau\n"
 " ShuffleBackgroundImages  - Mélanger la liste des images d’arrière-plan\n"
@@ -1914,12 +1914,12 @@ msgstr ""
 " center:0 scaled:1 = deux dimensions complètes et respect des proportions\n"
 "\n"
 
-#: src/icewmbg.cc:1109 src/wmapp.cc:1817
+#: src/icewmbg.cc:1134 src/wmapp.cc:1817
 #, c-format
 msgid "Unrecognized option '%s'."
 msgstr "Option non reconnue '%s'."
 
-#: src/icewmbg.cc:1139
+#: src/icewmbg.cc:1164
 msgid "Cannot start, because another icewmbg is still running."
 msgstr ""
 "Impossible de démarrer car une autre instance d'icewmbg est en cours "
@@ -2342,8 +2342,8 @@ msgstr ""
 "  --replace           Remplace un gestionnaire de fenêtres existant.\n"
 "  -r, --restart       Indique à l’instance icewm de redémarrer.\n"
 "\n"
-"  --configured        Imprime la configuration de l’heure de la compilation."
-"\n"
+"  --configured        Imprime la configuration de l’heure de la "
+"compilation.\n"
 "  --directories       Imprime les répertoires de configuration.\n"
 "  -l, --list-themes   Imprime une liste de tous les thèmes disponibles.\n"
 "\n"
